--- a/home.html
+++ b/home.html
@@ -218,6 +218,7 @@
             <p id="date">demo | demo 00 | 00:00</p>
             <h1 class="temp">{%tempval%}&deg;C</h1>
             <h3 class="tempmin_max">min {%tempmin%}&deg;C | max {%tempmax%}&deg;C</h3>
+            <h3>Working</h3>
         </div>
     </div>
 
